--- a/src/shared/routes/DjNameGenerator/src/index.css
+++ b/src/shared/routes/DjNameGenerator/src/index.css
@@ -18,6 +18,7 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     height: 100%;
     margin: 0;
+    overflow: hidden;
     padding: 0;
     text-rendering: optimizelegibility;
     width: 100%;
@@ -27,6 +28,7 @@ body {
 #root,
 #app {
     height: 100%;
+    overflow: hidden;
     width: 100%;
 }
 
@@ -204,6 +206,8 @@ a {
     justify-content: flex-start;
     min-height: 100%;
     min-width: 500px;
+    -webkit-overflow-scrolling: touch;
+    overflow-y: scroll;
     width: 500px;
     z-index: 2;
 }
